# order-book-engine

./: .gitignore  CMakeLists.txt  README.md  plan.md.txt
.kilo/plans/: tui-plan.md
config/: example.json
docs/: concurrency-invariants.md
include/amm/: bounded_queue.hpp  config.hpp  engine.hpp  ledger.hpp  types.hpp
src/: config.cpp  engine.cpp  ledger.cpp  main.cpp
tests/: test_core.cpp
